Fixed a mobile display error on the fines page.

--- a/themes/phoenix/templates/myresearch/fines.phtml
+++ b/themes/phoenix/templates/myresearch/fines.phtml
@@ -118,7 +118,7 @@
         <? $totalDue += $record['balance']; ?>
       <? endif; ?>
     <? endforeach; ?>
-      <tr style="font-weight:bold"><td colspan="6"><?=$this->transEsc('Total Balance Due')?></td><td><?=$this->safeMoneyFormat($totalDue/100.00) ?></td></tr>
+      <tr style="font-weight:bold"><td colspan="6"><?=$this->transEsc('Total Balance Due: ')?></td><td><?=$this->safeMoneyFormat($totalDue/100.00) ?></td></tr>
     </table>
   <? endif; ?>
 </div>
