--- a/themes/phoenix/less/myacct.less
+++ b/themes/phoenix/less/myacct.less
@@ -161,36 +161,38 @@ a.title {
       border: 0;
     }
     tbody {
-      td:nth-of-type(1) {
-        width: 100%;
-        &:before {
-          content: "Title & Location: ";
-          font-weight: bold;
-        }
-      }
-      td:nth-of-type(2):before {
-        content: "Due Date: ";
-        font-weight: bold;
-      }
-      td:nth-of-type(3):before {
-        content: "Return Date: ";
-        font-weight: bold;
-      }
-      td:nth-of-type(4):before {
-        content: "Bill Date: ";
-        font-weight: bold;
-      }
-      td:nth-of-type(5):before {
-        content: "Fee Type: ";
-        font-weight: bold;
-      }
-      td:nth-of-type(6):before {
-        content: "Fine Amount: ";
-        font-weight: bold;
-      }
-      td:nth-of-type(7):before {
-        content: "Balance: ";
-        font-weight: bold;
+      tr:not(:last-child) {
+          td:nth-of-type(1) {
+            width: 100%;
+            &:before {
+              content: "Title & Location: ";
+              font-weight: bold;
+            }
+          }
+          td:nth-of-type(2):before {
+            content: "Due Date: ";
+            font-weight: bold;
+          }
+          td:nth-of-type(3):before {
+            content: "Return Date: ";
+            font-weight: bold;
+          }
+          td:nth-of-type(4):before {
+            content: "Bill Date: ";
+            font-weight: bold;
+          }
+          td:nth-of-type(5):before {
+            content: "Fee Type: ";
+            font-weight: bold;
+          }
+          td:nth-of-type(6):before {
+            content: "Fine Amount: ";
+            font-weight: bold;
+          }
+          td:nth-of-type(7):before {
+            content: "Balance: ";
+            font-weight: bold;
+          }
       }
     }
   }
