Fixed display bug with maps link.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -823,12 +823,12 @@ div[resource="#record"] .table > tbody > tr.title > td {
         margin-top:47px;
     }
 }
-#record-tabs h3 {
+.record-tabs h3 {
     display: inline;
 }
 .maplink,
 .ablink {
-    font-size: ceil((@font-size-base * 0.88)); // ~10.5px
+    font-size: ceil((@font-size-base * 0.88)); // ~11px
 }
 .holdings-tab h3 {
     margin-bottom: 0;
@@ -866,7 +866,7 @@ tr[typeof="Offer"] th,
     padding-top: 0px;
     padding-bottom: 0px;
 }
-#record-tabs > div {
+.record-tabs > div {
     margin-top: 10px;
 }
 .holdings-unit {
