Language changes for my account and accounts FAQ.

--- a/themes/phoenix/templates/myresearch/menu.phtml
+++ b/themes/phoenix/templates/myresearch/menu.phtml
@@ -55,7 +55,7 @@
     <i class="fa fa-fw fa-folder-open" aria-hidden="true"></i> Special Collections
   </a>
   <a href="https://www.lib.uchicago.edu/borrow/borrowing/my-accounts/" class="list-group-item external" target="_blank">
-    <i class="fa fa-fw fa-question-circle-o" aria-hidden="true"></i> Account FAQ
+    <i class="fa fa-fw fa-question-circle-o" aria-hidden="true"></i> Accounts FAQ
   </a>
 </div>
 <h4>Course Reserves</h4>
