--- a/themes/phoenix/less/myacct.less
+++ b/themes/phoenix/less/myacct.less
@@ -129,7 +129,29 @@ a.title {
   font-size: 1.1em;
 }
 
+// "Select All" input in toolbar
+.toolbar>.checkbox>label, .bulkActionButtons>.checkbox>label {
+  padding: 10px;
+  &>input {
+    margin: 10px 0 -10px 0;
+  }
+  &>span {
+    padding: 0 10px;
+    font-weight: 800;
+  }
+}
 
+// ** My Lists ** //
+.pull-right.flip {
+    padding-top: 20px;
+}
+
+.edit-icons {
+    margin-top: 10px;
+    &>a {
+    margin-right: 10px;
+  }
+}
 
 // ** Fines ** //
 
