--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -615,22 +615,22 @@ footer .text-right {
     background-image:none;
 }
 
-.btn-primary {
-    #gradient.vertical(@btn-primary-bg, @brand-primary-dark);
-    @media (max-width: @screen-xs-max) {
-        #gradient.vertical(lighten(@gray-lighter, 5%), lighten(@gray-light, 10%));
-        border:1px solid lighten(@gray-light, 5%);
-        color:@gray-dark;
-    }
-}
-.btn-primary:hover, 
-.btn-primary:active {    
-    @media (max-width: @screen-xs-max) {
-        #gradient.vertical(lighten(@gray-lighter, 0%), lighten(@gray-light, 5%));
-        border:1px solid lighten(@gray-light, 10%);
-        color:@gray-dark;
-    }
-}
+// .btn-primary {
+//     #gradient.vertical(@btn-primary-bg, @brand-primary-dark);
+//     @media (max-width: @screen-xs-max) {
+//         #gradient.vertical(lighten(@gray-lighter, 5%), lighten(@gray-light, 10%));
+//         border:1px solid lighten(@gray-light, 5%);
+//         color:@gray-dark;
+//     }
+// }
+// .btn-primary:hover, 
+// .btn-primary:active {    
+//     @media (max-width: @screen-xs-max) {
+//         #gradient.vertical(lighten(@gray-lighter, 0%), lighten(@gray-light, 5%));
+//         border:1px solid lighten(@gray-light, 10%);
+//         color:@gray-dark;
+//     }
+// }
 .mini-search > .btn {
     @media (max-width: @screen-xs-max) {
         width:100%;
