--- a/themes/phoenix/less/myacct.less
+++ b/themes/phoenix/less/myacct.less
@@ -152,6 +152,12 @@ a.title {
     margin-right: 10px;
   }
 }
+.template-dir-myresearch.template-name-mylist {
+    .callnumAndLocation {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+}
 
 // ** Fines ** //
 
