--- a/themes/phoenix/templates/RecordDriver/SolrDefault/list-entry.phtml
+++ b/themes/phoenix/templates/RecordDriver/SolrDefault/list-entry.phtml
@@ -22,7 +22,7 @@
     <? $thumbnail = ob_get_contents(); ?>
   <? ob_end_clean(); ?>
 <? endif; ?>
-<div class="result<? if($this->driver->supportsAjaxStatus()): ?> ajaxItem<? endif ?>">
+<div class="result<? if($this->driver->supportsAjaxStatus()): ?> ajaxItem<? endif ?> row">
   <input type="hidden" value="<?=$this->escapeHtmlAttr($id) ?>" class="hiddenId"/>
   <input type="hidden" value="<?=$this->escapeHtmlAttr($source) ?>" class="hiddenSource"/>
   <div class="checkbox hidden-print">
@@ -34,7 +34,7 @@
     <? endif; ?>
     <div class="media-body">
       <div class="row short-view">
-        <div class="col-sm-8">
+        <div class="col-sm-6 col-xs-12">
           <div class="resultItemLine1">
             <? $missing = $this->driver instanceof \VuFind\RecordDriver\Missing; ?>
             <? if (!$missing): ?><a href="<?=$this->recordLink()->getUrl($this->driver)?>" class="getFull" data-view="<?=$this->params->getOptions()->getListViewOption() ?>"><? endif; ?>
@@ -99,30 +99,13 @@
               <? endforeach; ?>
               <br/>
             <? endif; ?>
-            <? $listNotes = $this->driver->getListNotes($list_id, $user_id); ?>
-            <? if (count($listNotes) > 0): ?>
-              <strong><?=$this->transEsc('Notes')?>:</strong>
-              <? if (count($listNotes) > 1): ?><br/><? endif; ?>
-              <? foreach ($listNotes as $note): ?>
-                <?=$this->escapeHtml($note)?><br/>
-              <? endforeach; ?>
-            <? endif; ?>
-
-            <? if (count($this->lists) > 0): ?>
-                <strong><?=$this->transEsc('Saved in')?>:</strong>
-                <? $i=0;foreach($this->lists as $current): ?>
-                    <a href="<?=$this->url('userList', array('id' => $current->id))?>"><?=$this->escapeHtml($current->title)?></a><? if($i++ < count($this->lists)-1): ?>,<? endif; ?>
-                <? endforeach; ?>
-                <br/>
-            <? endif; ?>
 
             <div class="callnumAndLocation ajax-availability hidden">
               <? if ($this->driver->supportsAjaxStatus()): ?>
-                <strong class="hideIfDetailed"><?=$this->transEsc('Call Number')?>:</strong>
+                <!--<strong class="hideIfDetailed"><?=$this->transEsc('Call Number')?>:</strong>
                 <span class="callnumber ajax-availability hidden">
                   <?=$this->transEsc('Loading')?>...
-                </span><br/>
-                <strong><?=$this->transEsc('Located')?>:</strong>
+                </span><br/>-->
                 <span class="location ajax-availability hidden">
                   <?=$this->transEsc('Loading')?>...
                 </span>
@@ -133,6 +116,10 @@
                 <? endif; ?>
               <? endif; ?>
             </div>
+
+            <? if (!$openUrlActive && empty($urls) && $this->driver->supportsAjaxStatus()): ?>
+              <span class="status ajax-availability hidden"><?=$this->transEsc('Loading')?>...</span>
+            <? endif; ?>
 
             <? /* We need to find out if we're supposed to display an OpenURL link ($openUrlActive),
                   but even if we don't plan to display the link, we still want to get the $openUrl
@@ -146,7 +133,6 @@
               if ($openUrlActive || !empty($urls)):
             ?>
               <? if ($openUrlActive): ?>
-                <br/>
                 <?=$openUrl->renderTemplate()?>
               <? endif;?>
 
@@ -159,18 +145,48 @@
               <? endif; ?>
             <br/>
 
-            <?=$this->record($this->driver)->getFormatList() ?>
+            <?//=$this->record($this->driver)->getFormatList() ?>
 
-            <? if (!$openUrlActive && empty($urls) && $this->driver->supportsAjaxStatus()): ?>
-              <span class="status ajax-availability hidden"><?=$this->transEsc('Loading')?>...</span>
-              <br/><br/>
-            <? endif; ?>
             <?=$this->record($this->driver)->getPreviews()?>
           </div>
         </div>
 
-        <div class="col-sm-4 right">
-          <i class="fa fa-fw fa-edit" aria-hidden="true"></i> <a href="<?=$this->url('myresearch-edit')?>?id=<?=urlencode($id)?>&amp;source=<?=urlencode($source)?><? if (!is_null($list_id)):?>&amp;list_id=<?=urlencode($list_id)?><? endif; ?>" class="edit tool"><?=$this->transEsc('Edit')?></a><br/>
+        <div class="col-sm-6 col-xs-12">
+
+            <div class="callnumAndLocation ajax-availability hidden">
+              <? if ($this->driver->supportsAjaxStatus()): ?>
+                <span class="hideIfDetailed"><?=$this->transEsc('Call Number')?>:</span>
+                <strong><span class="callnumber ajax-availability hidden">
+                  <?=$this->transEsc('Loading')?>...
+                </span></strong><br/>
+                <div class="locationDetails"></div>
+              <? else: ?>
+                <? $summCallNo = $this->driver->getCallNumber(); if (!empty($summCallNo)): ?>
+                  <strong><?=$this->transEsc('Call Number')?>:</strong> <?=$this->escapeHtml($summCallNo)?>
+                <? endif; ?>
+              <? endif; ?>
+            </div>
+
+
+            <? if (count($this->lists) > 0): ?>
+                <?=$this->transEsc('Saved in')?>:
+                <? $i=0;foreach($this->lists as $current): ?>
+                    <strong><a href="<?=$this->url('userList', array('id' => $current->id))?>"><?=$this->escapeHtml($current->title)?></a><? if($i++ < count($this->lists)-1): ?>,<? endif; ?></strong>
+                <? endforeach; ?>
+                <br/>
+            <? endif; ?>
+
+            <? $listNotes = $this->driver->getListNotes($list_id, $user_id); ?>
+            <? if (count($listNotes) > 0): ?>
+              <strong><?=$this->transEsc('Notes')?>:</strong>
+              <? if (count($listNotes) > 1): ?><br/><? endif; ?>
+              <? foreach ($listNotes as $note): ?>
+                <?=$this->escapeHtml($note)?><br/>
+              <? endforeach; ?>
+            <? endif; ?>
+
+          <div class="edit-icons">
+          <i class="fa fa-fw fa-edit" aria-hidden="true"></i> <a href="<?=$this->url('myresearch-edit')?>?id=<?=urlencode($id)?>&amp;source=<?=urlencode($source)?><? if (!is_null($list_id)):?>&amp;list_id=<?=urlencode($list_id)?><? endif; ?>" class="edit tool"><?=$this->transEsc('Edit')?></a>
           <? /* Use a different delete URL if we're removing from a specific list or the overall favorites: */
             $deleteUrl = null === $list_id
                 ? $this->url('myresearch-favorites')
@@ -179,7 +195,6 @@
 
             $dLabel = 'delete-label-' . preg_replace('[\W]','-',$id);
           ?>
-          <div class="dropdown">
             <i class="fa fa-fw fa-trash-o" aria-hidden="true"></i> <a class="dropdown-toggle" id="<?=$dLabel ?>" role="button" data-toggle="dropdown" data-target="#" href="<?=$deleteUrlGet ?>">
               <?=$this->transEsc('Delete') ?>
             </a>
@@ -187,7 +202,7 @@
               <li><a onClick="$.post('<?=$deleteUrl?>', {'delete':'<?=$this->escapeJs($id) ?>','source':'<?=$this->escapeJs($source) ?>','confirm':true},function(){location.reload(true)})" title="<?=$this->transEsc('confirm_delete_brief')?>"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
               <li><a><?=$this->transEsc('confirm_dialog_no')?></a></li>
             </ul>
-          </div>
+          </div><!--/.edit-icons-->
 
           <?=$this->driver->supportsCoinsOpenUrl()?'<span class="Z3988" title="'.$this->escapeHtmlAttr($this->driver->getCoinsOpenUrl()).'"></span>':''?>
         </div>
