Added KZ's styles to fix a padding issue with selected facets in the sidebar.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -791,6 +791,9 @@ a.bibToggle:hover {
 .subjectsToggle:focus {
     color: #444;
 }
+.pull-right.flip {
+    padding: 0!important;
+}
 
 /*Top of full record*/
 div[resource="#record"] .table > tbody > tr.title > td {
