--- a/themes/phoenix/templates/myresearch/cataloglogin.phtml
+++ b/themes/phoenix/templates/myresearch/cataloglogin.phtml
@@ -28,13 +28,13 @@
     </div>
     <? endif; ?>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="profile_cat_username"><?=$this->transEsc('Library Catalog Username')?>:</label>
+      <label class="col-sm-2 control-label" for="profile_cat_username"><!--Library Catalog Username-->Library Barcode:</label>
       <div class="col-sm-10">
         <input id="profile_cat_username" type="text" name="cat_username" value="" class="form-control"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="profile_cat_password"><?=$this->transEsc('Library Catalog Password')?>:</label>
+      <label class="col-sm-2 control-label" for="profile_cat_password"><!--Library Catalog Password-->Your Last Name:</label>
       <div class="col-sm-10">
         <input id="profile_cat_password" type="password" name="cat_password" value="" class="form-control"/>
       </div>
