Fixed the appearance of the repeat in worldcat link.

--- a/themes/phoenix/templates/alphabrowse/alphabrowseMini.phtml
+++ b/themes/phoenix/templates/alphabrowse/alphabrowseMini.phtml
@@ -27,5 +27,5 @@
   <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> <?=$this->transEsc("Browse")?></button>
   <a href="#" role="button" class="btn btn-link mini-box-toggle keyword"><?=$this->transEsc("Keyword")?></a> | <a href="<?=$this->url($advSearch)?>" role="button" class="btn btn-link mini-adv-link"><?=$this->transEsc("Advanced")?></a>
   |
-  <a class="mini-worldcat-link" href="http://forms2.lib.uchicago.edu/lib/worldcatlookup/?<?php echo $_SERVER['QUERY_STRING']; ?>">Repeat search in WorldCat</a>
+  <a class="mini-worldcat-link btn btn-link" href="http://forms2.lib.uchicago.edu/lib/worldcatlookup/?<?php echo $_SERVER['QUERY_STRING']; ?>">Repeat search in WorldCat</a>
 </form>
