--- a/themes/phoenix/templates/record/view.phtml
+++ b/themes/phoenix/templates/record/view.phtml
@@ -98,7 +98,7 @@
           <? endforeach; ?>
         </ul>
 
-        <div class="tab-content">
+        <div class="tab-content" id="record-tabs">
           <? if (!$this->loadInitialTabWithAjax || !isset($activeTabObj) || !$activeTabObj->supportsAjax()): ?>
             <div class="tab-pane active <?=$this->activeTab ?>-tab">
               <?=isset($activeTabObj) ? $this->record($this->driver)->getTab($activeTabObj) : '' ?>
