Initial pass at updating the holdings display.

--- a/themes/phoenix/templates/RecordDriver/AbstractBase/previewlink.phtml
+++ b/themes/phoenix/templates/RecordDriver/AbstractBase/previewlink.phtml
@@ -43,7 +43,7 @@
                 if ($name) {
                     $title = '';
                     $html .= '<div class="' . $divClass .'">'
-                        . '<a title="' . $title . '" class="text-success eLink hidden tool ' . $linkClass . ' ' . $idClasses . '" target="_blank">'
+                        . '<a title="' . $title . '" class="eLink hidden tool ' . $linkClass . ' ' . $idClasses . '" target="_blank">'
                         . $text 
                         . $tooltip
                         . '</a>' 
