--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -2,6 +2,7 @@
 @import "variables";
 @import "vendor/bootstrap-slider/bootstrap-slider";
 @import "myacct";
+@import "item-record";
 
 /*Variables and mixins*/
 .tiny-text-shadow {
@@ -876,9 +877,6 @@ tr[typeof="Offer"] th,
     padding: 10px 10px 20px 10px;
     //line-height: 15px;
     border-bottom:1px dashed @table-border-color;
-}
-.holdings-unit:nth-child(even) {
-    background:@table-bg;
 }
 .holdings-unit:last-child {
     border-bottom: none;
