--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -58,18 +58,21 @@
   <a class="placehold" data-lightbox title="<?=$this->transEsc('request_place_text')?>" href="<?=$this->recordLink()->getRequestUrl($holdingTitleHold)?>"><i class="fa fa-flag" aria-hidden="true"></i>&nbsp;<?=$this->transEsc('title_hold_place')?></a>
 <? endif; ?>
 <? if (!empty($urls) || $openUrlActive || $hathiLink): ?>
-  <div id="e-links" class="holdings-unit">
-  <h3><?=$this->transEsc("Internet")?></h3>
+  <div id="e-links" class="holdings-locpanel">
+  <div class="locpanel-heading online">
+  <h2><?=$this->transEsc("Online")?></h2><br/>
   <? if (!empty($urls)): ?>
       <?/*For now, only display a browse link if the first e-holding has a callnumber - Fix later*/?>
       <? if (isset($urls[0]['callnumber'])):?>
-        <h4><span><?=$this->transEsc($callNumLabel)?> </span><?=$urls[0]['callnumber']?></h4> <a href="<?= $this->url('home')?>alphabrowse/Home?source=lcc&amp;from=<?=$this->escapeHtml($urls[0]['callnumber'])?>"
+        <h3><span><?=$this->transEsc($callNumLabel)?> </span><?=$urls[0]['callnumber']?></h3> <a href="<?= $this->url('home')?>alphabrowse/Home?source=lcc&amp;from=<?=$this->escapeHtml($urls[0]['callnumber'])?>"
            class="ablink"><?=$callNumDisplayText?></a><br/>
       <?endif;?>
+  </div><!--/.locpanel-heading online-->
+  <div id="e-links" class="holdings-unit">
     <? foreach ($urls as $current): ?>
       <? $linkText = (!empty($current['text']) ? ': '.$current['text'] : ''); ?>
       <div>
-        <a href="<?=$this->escapeHtmlAttr($this->proxyUrl($current['url']))?>" class="eLink text-success"><?=$this->escapeHtml($this->Eholdings()->getEholdingsLinkText($current['type']) . $linkText)?></a> <?=$current['desc']?><br/>
+        <a href="<?=$this->escapeHtmlAttr($this->proxyUrl($current['url']))?>" class="eLink"><?=$this->escapeHtml($this->Eholdings()->getEholdingsLinkText($current['type']) . $linkText)?></a> <?=$current['desc']?><br/>
       </div>
     <? endforeach; ?>
   <? endif; ?>
@@ -81,14 +84,13 @@
   <? endif; ?>
   <?=$this->record($this->driver)->getPreviewLink()?>
   <?=$this->ServiceLinks()->altText($this->driver->getFormats(), $bib)?>
-  </div>
+  </div><!--/#e-links-->
+  </div><!--/.holdings-locpanel-->
 <? endif; ?>
 <? foreach ($holdings['holdings'] as $holding): ?>
 <?/*Convenience variable for e-resources*/?>
 <?$isFullTextOnline = $holding['location'] == 'FullText'?>
 <?$isRelatedTextOnline = $holding['location'] == 'Related'?>
-
-<div class="holdings-unit">
 
 <?//Bound-withs?>
 <? if (!empty($holding['items'][0]['boundwiths'])): ?>
@@ -103,16 +105,39 @@
 <? endif; ?>
 <?//End Bound-withs?>
 
-<h3>
-  <? $locationText = $this->transEsc('location_' . $holding['location'], [], $holding['location']); ?>
-  <? $locationText = strpos($locationText, '-') ? substr($locationText, 0, strpos($locationText, '-')) : $locationText; ?>
+<div class="holdings-locpanel">
+<div class="locpanel-heading">
+<h2>
+  <? // Get the raw location text. This contains the holdings id # and other such things ?>
+  <? // Break it into component parts and use it for different purposes ?>
+  <? $rawLocationText = $this->transEsc('location_' . $holding['location'], [], $holding['location']); ?>
+  <? $lTextArray = explode('-', $rawLocationText); ?>
+  <? $isUnbound = (trim(end($lTextArray)) == 'unbound'); ?>
+  <? $locationText = $lTextArray[0]; ?>
   <? if (isset($holding['locationhref']) && $holding['locationhref']): ?>
     <a href="<?=$holding['locationhref']?>" target="_blank"><?=$locationText?></a>
   <? else: ?>
     <?=$locationText?>
   <? endif; ?>
-</h3>
+</h2>
 
+<?/*Get the first barcode to pass to the map links*/
+  $firstBarcode = $this->tab->getFirstBarcode($holding);?>
+<?=$this->ServiceLinks()->maps($this->driver->getUniqueID(), $firstBarcode)?>
+
+<?/*Callnumbers*/?>
+<? $callNos = $this->tab->getUniqueCallNumbersPhoenix($holding['items']); if (!empty($callNos)): ?>
+<? $hasCallNos = !empty($callNos['display']); ?>
+<?foreach ($callNos['display'] as $numKey => $callNo): ?>
+   <br/><h3><span><?=$hasCallNos ? $this->transEsc($callNumLabel) . ' ' : ''?></span> <?=$this->escapeHtml($callNo)?></h3>
+   <? $source = ($callNos['typeid'][$numKey] == '3') ? 'dewey' : 'lcc'; ?>
+   <a href="<?= $this->url('home')?>alphabrowse/Home?source=<?=$source?>&amp;from=<?=$this->escapeHtml($callNos['sort'][$numKey])?>"
+      class="ablink"><?=$callNumDisplayText?></a><br/>
+ <? endforeach; ?>
+  
+</div><!--/.locpanel-heading-->
+
+<div class="holdings-unit">
 <? if ($isFullTextOnline):?>
   <strong><?=$this->transEsc("Available via:")?></strong>
 <? endif; ?>
@@ -120,19 +145,44 @@
   <br/><strong><?=$this->transEsc("Related Links:")?></strong>
 <? endif; ?>
 
-<?/*Get the first barcode to pass to the map links*/
-  $firstBarcode = $this->tab->getFirstBarcode($holding);?>
-<span class="maplink"><?=$this->ServiceLinks()->maps($this->driver->getUniqueID(), $firstBarcode)?></span>
 
-<?/*Callnumbers*/?>
-<? $callNos = $this->tab->getUniqueCallNumbersPhoenix($holding['items']); if (!empty($callNos)): ?>
-<? $hasCallNos = !empty($callNos['display']); ?>
-<?foreach ($callNos['display'] as $numKey => $callNo): ?>
-   <br/><h4><span><?=$hasCallNos ? $this->transEsc($callNumLabel) . ' ' : ''?></span> <?=$this->escapeHtml($callNo)?></h4>
-   <? $source = ($callNos['typeid'][$numKey] == '3') ? 'dewey' : 'lcc'; ?>
-   <a href="<?= $this->url('home')?>alphabrowse/Home?source=<?=$source?>&amp;from=<?=$this->escapeHtml($callNos['sort'][$numKey])?>"
-      class="ablink"><?=$callNumDisplayText?></a><br/>
- <? endforeach; ?>
+  <? if (isset($holding['textfields'])): ?>
+    <? if ($isUnbound): ?>
+      <h5>Availability:</h5>
+      <? foreach ($holding['textfields'] as $textFieldName => $textFields): ?>
+        <table class="holdings-table table unbound" data-display="<?=$this->tab->getDisplayNumber()?>">
+          <thead><tr><th colspan="3"><h6><?=$this->transEsc(ucfirst($textFieldName))?></h6></th></tr></thead>
+          <tbody>
+            <? foreach ($textFields as $current): ?>
+              <tr vocab="http://schema.org/" typeof="Offer">
+                <th><?=$this->escapeHtml($current)?></th>
+                <td>
+                  Check shelf for availability
+                  <link property="availability" href="http://schema.org/InStock"/>
+                  <span class="loan-period">Unbound, non-renewable</span>
+                </td>
+              </tr>
+            <? endforeach;?>
+          </tbody>
+        </table>
+      <? endforeach;?> 
+    <? else: ?>
+      <div class="section row libraryhas">
+        <h5>Library has:</h5>
+        <? foreach ($holding['textfields'] as $textFieldName => $textFields): ?>
+        <? // Translation for summary is a special case for backwards-compatibility ?>
+        <div class="col-sm-4">
+          <h6><?=$textFieldName == 'summary' ? $this->transEsc("Volume Holdings") : $this->transEsc(ucfirst($textFieldName))?></h6>
+          <ul>
+          <? foreach ($textFields as $current): ?>
+            <li typeof="Enumeration"><?=$this->escapeHtml($current)?></li>
+          <? endforeach; ?>
+          </ul>
+        </div>
+        <? endforeach;?> 
+      </div>
+    <? endif; ?>
+  <? endif; ?>
 
 <table class="holdings-table table" data-display="<?=$this->tab->getDisplayNumber()?>">
   <caption><?=$this->transEsc('Holdings details from')?> <?=$this->transEsc($holding['location'])?></caption>
@@ -147,21 +197,10 @@
     </td>
   </tr>-->
   <? endif; ?>
-  <? if (isset($holding['textfields'])): foreach ($holding['textfields'] as $textFieldName => $textFields): ?>
-    <tr class="section">
-      <? // Translation for summary is a special case for backwards-compatibility ?>
-      <th><?=$textFieldName == 'summary' ? $this->transEsc("Volume Holdings") : $this->transEsc(ucfirst($textFieldName))?>:</th>
-      <td>
-        <? foreach ($textFields as $current): ?>
-          <div typeof="Enumeration"><?=$this->escapeHtml($current)?></div>
-        <? endforeach; ?>
-      </td>
-    </tr>
-  <? endforeach; endif; ?>
   <? foreach ($holding['items'] as $row): ?>
     <?/*E-holding links if they exist*/?>
     <? if (isset($row['eHolding']['uri'])):?>
-        <br/><a href="<?=$this->proxyUrl($row['eHolding']['uri'])?>" class="fulltext eLink text-success"><?=$this->transEsc("Full text online")?></a>
+        <br/><a href="<?=$this->proxyUrl($row['eHolding']['uri'])?>" class="fulltext eLink"><?=$this->transEsc("Full text online")?></a>
     <? endif; ?>
     <?
       // AJAX Check record?
@@ -171,7 +210,9 @@
     ?>
     <? if (isset($row['barcode']) && $row['barcode'] != "" || (in_array($row['status'], $itemStatusWhitelist))): ?>
       <tr vocab="http://schema.org/" typeof="Offer">
-        <th><?=$this->transEsc("Copy")?> <?=$this->escapeHtml($row['number'])?></th>
+        <? if ($row['number']):?>
+        <th><?=$this->escapeHtml($row['number'])?></th>
+        <? endif; ?>
         <td>
           <? if ($row['reserve'] == "Y"): ?>
             <link property="availability" href="http://schema.org/InStoreOnly" />
@@ -271,6 +312,7 @@
             <link property="businessFunction" href="http://purl.org/goodrelations/v1#LeaseOut" />
             <link property="itemOffered" href="#record" />
         </td>
+        <td width="2"></td>
       </tr>
     <? endif; ?>
   <? endforeach; ?>
@@ -286,6 +328,7 @@
   <? endif; ?>
 </table>
 </div><!--/.holdings-unit-->
+</div><!--/.holdings-locpanel-->
 <? endforeach; ?>
 
 <? $history = $this->driver->getRealTimeHistory(); ?>
