--- a/themes/phoenix/templates/ajax/resolverLinks.phtml
+++ b/themes/phoenix/templates/ajax/resolverLinks.phtml
@@ -3,7 +3,7 @@
     <div class="openurls">
       <? foreach ($this->electronic as $link): ?>
         <? if (isset($link['href']) && !empty($link['href'])): ?>
-          <a href="<?=$this->escapeHtmlAttr($link['href'])?>" title="<?=isset($link['service_type'])?$this->escapeHtmlAttr($link['service_type']):''?>" class="text-success eLink"><?=isset($link['title'])?$this->escapeHtml($link['title']):''?></a> <?=isset($link['coverage'])?$this->escapeHtml($link['coverage']):''?>
+          <a href="<?=$this->escapeHtmlAttr($link['href'])?>" title="<?=isset($link['service_type'])?$this->escapeHtmlAttr($link['service_type']):''?>" class="eLink"><?=isset($link['title'])?$this->escapeHtml($link['title']):''?></a> <?=isset($link['coverage'])?$this->escapeHtml($link['coverage']):''?>
         <? else: ?>
           <?=isset($link['title'])?$this->escapeHtml($link['title']):''?> <?=isset($link['coverage'])?$this->escapeHtml($link['coverage']):''?>
         <? endif; ?>
