Switched item type display to description from name. Fixes a bug that was causing names with -s to display incorrectly.

--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -223,7 +223,7 @@
           <? else: ?>
             <? if ($row['availability']): ?>
               <? /* Begin Available Items (Holds) */ ?>
-               <? if (isset($row['itemTypeCode']) && $row['itemTypeCode'] != "stks"):?>
+               <? if (isset($row['itemTypeCode'])):?>
                   <span>Loan period: <?=$row['itemTypeName']?>&nbsp;</span>
                <?endif;?>
 
