--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -230,7 +230,7 @@
           <? else: ?>
             <? if ($row['availability']): ?>
               <? /* Begin Available Items (Holds) */ ?>
-               <? if (isset($row['itemTypeCode'])):?>
+               <? if (isset($row['itemTypeCode']) && !empty($row['itemTypeName'])):?>
                   <span>Loan period: <?=$row['itemTypeName']?>&nbsp;</span>
                <?endif;?>
 
