--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -252,11 +252,13 @@
           <? else: ?>
             <? if ($row['availability']): ?>
               <? /* Begin Available Items (Holds) */ ?>
-               <? if (isset($row['itemTypeCode']) && !empty($row['itemTypeName'])):?>
-                  <span>Loan period: <?=$row['itemTypeName']?>&nbsp;</span>
-               <?endif;?>
 
-               <span class="text-success"><?=$this->transEsc($row['status'] == 'AVAILABLE-AT-MANSUETO' ? 'Available' : $row['status_name'])?><link property="availability" href="http://schema.org/InStock" /></span>
+               <span class="text-success">
+                   <?=$this->transEsc($row['status'] == 'AVAILABLE-AT-MANSUETO' ? 'Available' : $row['status_name'])?><link property="availability" href="http://schema.org/InStock" />
+                   <? if (isset($row['itemTypeCode']) && !empty($row['itemTypeName'])):?>
+                      <span class="loan-period">Loan period: <?=$row['itemTypeName']?>&nbsp;</span>
+                   <?endif;?>
+               </span>
                <?=$this->ServiceLinks()->scanAndDeliver($row)?>
                <?=$this->ServiceLinks()->asr($row)?>
                <?=$this->ServiceLinks()->dllStorage($row)?>
