--- a/themes/phoenix/less/item-record.less
+++ b/themes/phoenix/less/item-record.less
@@ -344,7 +344,7 @@ table.holdins-unit tr.section div {
     list-style: none;
     list-style-type: none;
     padding-left: 1em;
-    text-indent: -1em;
+    margin-left: -1em;
   }
   h5 {
     padding-left: 0.75em;
