--- a/themes/phoenix/less/item-record.less
+++ b/themes/phoenix/less/item-record.less
@@ -34,6 +34,12 @@ h5 {
     margin-top: 0.5em;
   }
 }
+.unbound h5 {
+  margin-left: 0;
+}
+.holding-location {
+  margin-left: 0.35em;
+} 
 
 h6 {
   font-size: 1.3em;
