--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -138,8 +138,20 @@
     <? endforeach; ?>
 <? endif; ?>
 
-<?/*Get the first barcode to pass to the map links*/
-  $firstBarcode = $this->tab->getFirstBarcode($holding);?>
+<? /* Variables for checking the status of Library Has*/?>
+<? $flatLibHas = call_user_func_array('array_merge', $otherTextualHoldings['issues']); ?>
+<? $libHasCount = count($flatLibHas); ?>
+<? $emptyLibHas = empty(trim($flatLibHas[0])); ?>
+<? $doesNotHaveLibraryhas = ($libHasCount <= 1 && $emptyLibHas); ?>
+
+<? /* Variables for checking the status of holdings notes*/?>
+<? $flatHoldingsNotes = call_user_func_array('array_merge', $holdingsNotes['textfields']); ?>
+<? $holdingNotesCount = count($flatHoldingsNotes); ?>
+<? $emptyHoldingNotes = empty(trim($flatHoldingsNotes[0])); ?>
+<? $noHoldingsNotes = ($holdingNotesCount <= 1 && $emptyHoldingNotes); ?>
+
+<?/*Get the first barcode to pass to the map links*/ ?>
+<? $firstBarcode = $this->tab->getFirstBarcode($holding);?>
 <?=$this->ServiceLinks()->maps($this->driver->getUniqueID(), $firstBarcode)?>
 
 <?/*Callnumbers*/?>
@@ -163,7 +175,7 @@
 
   <? /* Use the stored and separated textual (summary) holdings */?>
   <? if (isset($holding['textfields'])): ?>
-      <? if ($holdingsNotes): ?>
+      <? if (!$noHoldingsNotes): ?>
         <p class="holdings-notes"><strong>Holdings notes: </strong> 
           <? foreach ($holdingsNotes['textfields']['holdings notes'] as $holdingNote): ?>
             <?=$holdingNote?>
@@ -171,7 +183,7 @@
         </p>
       <? endif; ?>
 
-      <? if ($otherTextualHoldings): ?>
+      <? if (!$doesNotHaveLibraryhas): ?>
         <? /* The number of ownership types*/?>
         <? $numTextHoldings = count($otherTextualHoldings); ?>
         <? $summDivClass = ($numTextHoldings > 2 ? 'col-sm-4' : 'col-sm-6') ;?>
@@ -207,14 +219,16 @@
             <tbody>
               <? foreach ($textFields as $current): ?>
                 <? $arr = explode($splitChar, $current); ?>
-                <tr vocab="http://schema.org/" typeof="Offer">
-                  <th><?=$this->escapeHtml($arr[0])?></th>
-                  <td>
-                    Check shelf for availability
-                    <link property="availability" href="http://schema.org/InStock"/>
-                    <span class="loan-period">Unbound, non-renewable</span>
-                  </td>
-                </tr>
+                <? if (!empty(trim($arr[0]))): ?>
+                  <tr vocab="http://schema.org/" typeof="Offer">
+                    <th><?=$this->escapeHtml($arr[0])?></th>
+                    <td>
+                      Check shelf for availability
+                      <link property="availability" href="http://schema.org/InStock"/>
+                      <span class="loan-period">Unbound, non-renewable</span>
+                    </td>
+                  </tr>
+                <? endif; ?>
               <? endforeach;?>
             </tbody>
           </table>
@@ -233,7 +247,9 @@
 <? // Only display availability heading if holding has items ?>
 <? if ($hasItems): ?>
     <h5>Availability:</h5>
-    <span class="holding-location"><?=$locationText?></span>
+    <? if($unboundIssues || !$doesNotHaveLibraryhas): ?>
+      <span class="holding-location"><?=$locationText?></span>
+    <? endif; ?>
 <? endif; ?>
 
 <table class="holdings-table table" data-display="<?=$this->tab->getDisplayNumber()?>">
