Changed language on unbound issues. Fixes #30.

--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -225,7 +225,7 @@
                     <td>
                       Check shelf for availability
                       <link property="availability" href="http://schema.org/InStock"/>
-                      <span class="loan-period">Unbound, non-renewable</span>
+                      <span class="loan-period">Building use only</span>
                     </td>
                   </tr>
                 <? endif; ?>
